--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Shenhao Shi"
-description              : "I am currently pursuing a Master's degree in Pattern Recognition and Intelligent Systems at the School of Remote Sensing and Information Engineering, Wuhan University. My research interests primarily focus on computer vision, 3D reconstruction, and SLAM (Simultaneous Localization and Mapping)."
+description              : "Pursuing a Master's degree in Pattern Recognition and Intelligent Systems at Wuhan University. Research interests focus on computer vision, 3D reconstruction, and SLAM (Simultaneous Localization and Mapping)."
 repository               : "Rit-Shi/Rit-Shi.github.io"
 google_scholar_stats_use_cdn : false
 
